Set background so it's correct in dark mode

--- a/ui/resources/static/assets/Global.css
+++ b/ui/resources/static/assets/Global.css
@@ -37,6 +37,7 @@ body {
     font-family: sans-serif;
     min-height: 100%;
     color: var(--color-black);
+    background: var(--color-white);
 }
 
 a {
